# espy_app

./: .gitignore  SETUP_GUIDE.md  index.html  latest.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnimationStreamingTest.tsx  CategorySidebar.tsx  DashboardPage.tsx  EspyPage.tsx  NotesPage.tsx  NotificationsPage.tsx  OnboardingModal.tsx  PomodoroPage.tsx  SchedulePage.tsx  SettingsPage.tsx  TasksPage.tsx  UpdateBanner.tsx
src/components/onboarding/: EspyStep.tsx  VideoStep.tsx  WelcomeStep.tsx
src/contexts/: EspyContext.tsx  TodoContext.tsx
src/types/: todo.ts
src/utils/: pomodoro-persistence-test.ts  storage.ts
