[package]
name = "espy-app"
version = "0.1.0"
description = "Espy — Productivity Desktop App"
authors = ["Espy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "espy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"       # Strip expensive panic clean-up logic
codegen-units = 1     # Compile crates one after another for better optimization
lto = true            # Enable link-time optimizations
opt-level = "s"       # Optimize for binary size
strip = true          # Automatically strip symbols from the binary
